--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ pygments: true
 title : TALOS
 tagline: Endangered Languages Do Not Die
 author :
-  name : Yao Wei
-  email : medicalwei@gmail.com
+  name : TALOS Project
+  email : talos@linux.org.tw
   github : medicalwei
   twitter : medicalwei
 
