--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ tagline: Endangered Languages Do Not Die
 author :
   name : TALOS Project
   email : talos@linux.org.tw
-  github : medicalwei
-  twitter : medicalwei
+  github : talostw
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,7 +24,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://medicalwei.github.com/talos
+production_url : http://talostw.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -54,7 +53,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://medicalwei.github.com/talos
+  BASE_PATH : false
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
